2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/plugs (added):
	* flumotion/component/plugs/multibitrate (added):
	* flumotion/component/plugs/multibitrate/multibitrate.xml (added):
	* flumotion/component/plugs/multibitrate/__init__.py (added):
	* flumotion/component/plugs/multibitrate/Makefile.am (added):
	* flumotion/component/plugs/multibitrate/multibitrate.py (added):
	* flumotion/component/plugs/__init__.py (added):
	* flumotion/component/plugs/Makefile.am (added):
	Added a plug that renders m3u8 playlist for iphone multibitrate.

2011-02-15  Xavier Francisco  <xfrancisco@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Stopping the appsink when there's a version mismatch in mp4seek.
	See #12915
 	
2010-10-22  Marc-André Lureau  <mlureau@flumotion.com>

	* add support for basic seeking with dvr-window property.
	WARNING: this patch has not been reviewed, and has been quickly 
	tested. Ciao, Flumotion! And thanks for all the fish.

2010-10-19  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed and corrected by: Andoni Morales Alastruey

	* merged Smooth Streaming branch from git
	453cc2f262b64c0508f6b918b74677b5f287a819.

2010-10-05  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	Add removed import in last commit

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	Add support for audio only streams using the video stream
	only for synchronisation

2010-07-14  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py: